[project]
name = "zunda_talks"
version = "0.1.0"
description = "Zunda-mon and Metan-like explanation UI using Streamlit, Gemini, and Voicevox."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "google-genai",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Streamlitアプリのため配布用パッケージとしてはトップレベルモジュールのみ対象にし、
# pages/ や assets/ を setuptools の自動検出から除外する
[tool.setuptools.packages.find]
exclude = ["pages", "pages.*", "assets", "assets.*"]
